# modvx

./: .gitattributes  .gitignore  README.md  codecov.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: bench_liuz.yaml  default.yaml  full_liuz.yaml  mri_test.yaml  test.yaml  test_liuz.yaml
data/masks/: G004_AFRICA.nc  G004_ASIA.nc  G004_GLOBAL.nc  G004_NAMERICA.nc  G004_NHEM.nc  G004_SAMERICA.nc  G004_SHEM.nc  G004_TROPICS.nc  SINGV.nc  WAFS0P25_AUNZ.nc
data/obs/: IMERG.A01H.VLD20140901.S20140901T000000.E20140901T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140902.S20140902T000000.E20140902T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140903.S20140903T000000.E20140903T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140904.S20140904T000000.E20140904T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140905.S20140905T000000.E20140905T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140906.S20140906T000000.E20140906T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140907.S20140907T000000.E20140907T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140908.S20140908T000000.E20140908T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140909.S20140909T000000.E20140909T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140910.S20140910T000000.E20140910T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  IMERG.A01H.VLD20140911.S20140911T000000.E20140911T235959.FNL.V07B.SRCHHR.X360Y180.R1p0.FMT.nc  (+19 more)
src/modvx/: __init__.py  cli.py  config.py  utils.py  (+7 more)
tests/: test_cli.py  test_config.py  test_data_validator.py  test_file_manager.py  test_file_manager_extended.py  test_mpas_reader.py  test_parallel.py  test_perf_metrics.py  test_task_manager.py  test_utils.py  test_visualizer.py
(+624 files in other folders)
